# Mindful-Journal

./: CMakeLists.txt  README.md  issues.md  resources.qrc
src/: main.cpp
src/src/others/: mywriter.cpp  mywriter.h
src/src/qt/: myappsettingsclass.cpp  myappsettingsclass.h  mywritergui.cpp  mywritergui.h
src/ui/: Main.qml
src/ui/pages/: home.qml  settings.qml
